WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268967
ASSERTION FAILED: softWrapOpportunityIndex > 1 || inlineItemList[softWrapOpportunityIndex].isFloat()
https://bugs.webkit.org/show_bug.cgi?id=268967
Summary
ASSERTION FAILED: softWrapOpportunityIndex > 1 || inlineItemList[softWrapOppo...
Fujii Hironori
Reported
2024-02-07 23:36:56 PST
Created
attachment 469766
[details]
test case I'm observing an assertion failure with WinCairo Debug MiniBrowser
274271@main
. ASSERTION FAILED: softWrapOpportunityIndex > 1 || inlineItemList[softWrapOpportunityIndex].isFloat() C:\PSDEV\gc\Source\WebCore\layout/formattingContexts/inline/InlineLineBuilder.cpp(143) : hasTrailingSoftWrapOpportunity 1 00007FF964471CA9 WTFCrash 2 00007FF95D805EAD WTFCrashWithInfo 3 00007FF960E42386 WebCore::Layout::hasTrailingSoftWrapOpportunity 4 00007FF960E423A3 WebCore::Layout::hasTrailingSoftWrapOpportunity 5 00007FF960E41EDC WebCore::Layout::LineBuilder::candidateContentForLine 6 00007FF960E4002D WebCore::Layout::LineBuilder::placeInlineAndFloatContent::<lambda_0>::operator() 7 00007FF960E3EE05 WebCore::Layout::LineBuilder::placeInlineAndFloatContent 8 00007FF960E3E0DA WebCore::Layout::LineBuilder::layoutInlineContent 9 00007FF960E0A32B WebCore::Layout::InlineFormattingContext::lineLayout 10 00007FF960E09618 WebCore::Layout::InlineFormattingContext::layout 11 00007FF960EED208 WebCore::LayoutIntegration::LineLayout::layout 12 00007FF9618D148F WebCore::RenderBlockFlow::layoutModernLines 13 00007FF9618CEB56 WebCore::RenderBlockFlow::layoutInlineChildren 14 00007FF9618CDA03 WebCore::RenderBlockFlow::layoutInFlowChildren 15 00007FF9618CC71A WebCore::RenderBlockFlow::layoutBlock 16 00007FF9618AF87E WebCore::RenderBlock::layout 17 00007FF9619618D3 WebCore::RenderElement::layoutIfNeeded 18 00007FF9618CF802 WebCore::RenderBlockFlow::insertFloatingObject 19 00007FF9618CEEFB WebCore::RenderBlockFlow::layoutBlockChildren 20 00007FF9618CDA42 WebCore::RenderBlockFlow::layoutInFlowChildren 21 00007FF9618CC71A WebCore::RenderBlockFlow::layoutBlock 22 00007FF9618AF87E WebCore::RenderBlock::layout 23 00007FF9618CFDB3 WebCore::RenderBlockFlow::layoutBlockChild 24 00007FF9618CEF38 WebCore::RenderBlockFlow::layoutBlockChildren 25 00007FF9618CDA42 WebCore::RenderBlockFlow::layoutInFlowChildren 26 00007FF9618CC71A WebCore::RenderBlockFlow::layoutBlock 27 00007FF9618AF87E WebCore::RenderBlock::layout 28 00007FF9618CFDB3 WebCore::RenderBlockFlow::layoutBlockChild 29 00007FF9618CEF38 WebCore::RenderBlockFlow::layoutBlockChildren 30 00007FF9618CDA42 WebCore::RenderBlockFlow::layoutInFlowChildren 31 00007FF9618CC71A WebCore::RenderBlockFlow::layoutBlock Exception thrown at 0x00007FF964471CAE (WTF.dll) in WebKitWebProcess.exe: 0xC0000005: Access violation writing location 0x00000000BBADBEEF.
Attachments
test case
(15.12 KB, text/html)
2024-02-07 23:36 PST
,
Fujii Hironori
no flags
Details
test reduction
(225 bytes, text/html)
2024-02-08 12:47 PST
,
alan
no flags
Details
Patch
(3.24 KB, patch)
2024-02-08 15:04 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(3.24 KB, patch)
2024-02-13 11:17 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(3.24 KB, patch)
2024-02-13 11:49 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(3.22 KB, patch)
2024-02-13 12:01 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-02-08 08:33:10 PST
I can reproduce this on macOS as well. Will look into it shortly. Thank you!
Radar WebKit Bug Importer
Comment 2
2024-02-08 08:33:29 PST
<
rdar://problem/122548442
>
alan
Comment 3
2024-02-08 12:47:40 PST
Created
attachment 469778
[details]
test reduction
alan
Comment 4
2024-02-08 15:04:58 PST
Created
attachment 469780
[details]
Patch
alan
Comment 5
2024-02-13 11:17:25 PST
Created
attachment 469849
[details]
Patch
alan
Comment 6
2024-02-13 11:49:02 PST
Created
attachment 469851
[details]
Patch
alan
Comment 7
2024-02-13 12:01:39 PST
Created
attachment 469852
[details]
[fast-cq]Patch
EWS
Comment 8
2024-02-13 19:30:16 PST
Committed
274600@main
(fc0a2c0135c7): <
https://commits.webkit.org/274600@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469852
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug