ASSERTION FAILED: softWrapOpportunityIndex > 1 || inlineItemList[softWrapOpportunityIndex].isFloat() https://bugs.webkit.org/show_bug.cgi?id=268967 <rdar://problem/122548442>

Reviewed by Antti Koivisto.

Calling hasTrailingSoftWrapOpportunity recursively does not play well with this ASSERT (softWrapOpportunityIndex).
- keep float assertion
- use iterative approach

* LayoutTests/fast/inline/float-and-out-of-flow-assert-expected.txt: Added.
* LayoutTests/fast/inline/float-and-out-of-flow-assert.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::hasTrailingSoftWrapOpportunity):

Canonical link: https://commits.webkit.org/274600@main